<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="add">Add</string>
    <string name="add_shortcut_on_home_screen">Add shortcut on home screen</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="app_name">Samsung Music</string>
    <string name="artist">Artist</string>
    <string name="cache_size_setting">Temporary storage limit</string>
    <string name="contact_us">Contact us</string>
    <string name="cross_fade">Crossfade</string>
    <string name="current_playlist_settings">Current playlist settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="device_management_setting">Manage devices</string>
    <string name="disc_number_text">Disc number</string>
    <string name="download">Download</string>
    <string name="download_audio_quality">Downloading audio quality</string>
    <string name="duplicate_option">"Don't allow duplicate songs"</string>
    <string name="duplicate_option_summary">"Duplicate songs won't be added to your current playlist."</string>
    <string name="edge_lighting">Edge lighting</string>
    <string name="edge_lighting_summary">Light up the Edge screen when you play music.</string>
    <string name="encoding_type">Encoding type</string>
    <string name="explicit_setting">Explicit contents</string>
    <string name="export_playlists_kt">Export my playlists</string>
    <string name="export_playlists_settings_summary_kt">Save your playlists to your Android system library.</string>
    <string name="general">General</string>
    <string name="genre">Genre</string>
    <string name="heart">Heart</string>
    <string name="hide_folders">Hide folders</string>
    <string name="import_playlists_kt">Import Android playlists</string>
    <string name="import_playlists_settings_summary_kt">Get other playlists from your Android system library.</string>
    <string name="legacy_set_as">Set as</string>
    <string name="lgt_mp3_ringtone">MP3 ringtone</string>
    <string name="manage_tabs">Manage tabs</string>
    <string name="marketing">Accept marketing push</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_move_out_of_secure_folder">Move out of %s</string>
    <string name="menu_move_to_container">Move to %s</string>
    <string name="menu_move_to_personal_mode">Move to Personal</string>
    <string name="menu_move_to_private">Move to Private</string>
    <string name="menu_my_info">My Info</string>
    <string name="menu_play">Play</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_remove_from_private">Remove from Private</string>
    <string name="menu_share">Share</string>
    <string name="menu_sound_quality_and_effects">Sound quality and effects</string>
    <string name="menu_via_bluetooth">Listen via Bluetooth</string>
    <string name="menu_via_device">Listen via device</string>
    <string name="milk_events">Events</string>
    <string name="milk_help">Help</string>
    <string name="milk_products_tab">Subscriptions</string>
    <string name="milk_setting_drm_license">Extend DRM period</string>
    <string name="milk_store_music_video">Music Videos</string>
    <string name="mobile_data">Connect using mobile data</string>
    <string name="music_core_smart_view">Smart View</string>
    <string name="my_info_streaming">Streaming</string>
    <string name="my_music_mode">My Music mode</string>
    <string name="my_music_mode_off_summary">Play both streaming music and My Music.</string>
    <string name="my_music_mode_on_summary">Only play My Music.</string>
    <string name="play_on_other_device">Play on other device</string>
    <string name="play_similar_station_setting">Play similar station</string>
    <string name="play_similar_station_summary">Continue playing similar stations when the current station is finished.</string>
    <string name="play_speed">Play speed</string>
    <string name="playback">Playback</string>
    <string name="playlists">Playlists</string>
    <string name="recording_date">Recording date</string>
    <string name="screen_off_music">Music with screen off</string>
    <string name="screen_off_music_summary">Play music from the lock screen when headphones are connected and the screen is off.</string>
    <string name="search">Search</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="settings">Settings</string>
    <string name="settings_lock_screen">Control using lock screen</string>
    <string name="settings_lock_screen_summary">Control your music without unlocking your phone.</string>
    <string name="skip_silences">Skip silences</string>
    <string name="skip_silences_summary">Skip silences between tracks to reduce pauses during playback.</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="smart_volume">Smart volume</string>
    <string name="smart_volume_summary">Automatically adjust each track to the same volume.</string>
    <string name="streaming_audio_quality">Streaming audio quality</string>
    <string name="title">Title</string>
    <string name="track_number">Track number</string>
    <string name="tts_go_to_music">Go to Music</string>
    <string name="tts_volume">Volume</string>
    <string name="view_as_all">View as all</string>
    <string name="view_as_tree">View as tree</string>
    <string name="voice_control">Voice control</string>
    <string name="voice_control_summary">Use voice commands to control the music player</string>
    <string name="adapt_sound">Adapt Sound</string>
    <string name="drm_expired_test_menu">DRM 만료 테스트</string>
    <string name="hidden_menu_backup_db_files">Backup DB files</string>
    <string name="provider_search_authority">com.sec.android.app.music.MusicSearchProvider</string>
    <string name="dev">Developer</string>
</resources>