<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_launch_search" android:title="@string/search" app:showAsAction="always" />
    <group android:id="@id/menu_more_group">
        <item android:id="@id/menu_my_info" android:visible="false" android:title="@string/menu_my_info" />
        <item android:id="@id/menu_launch_edit_mode" android:title="@string/menu_edit" />
        <item android:id="@id/menu_delete" android:title="@string/menu_delete" />
        <item android:id="@id/menu_launch_add_shortcut" android:title="@string/add_shortcut_on_home_screen" />
        <item android:id="@id/menu_sound_alive" android:title="@string/menu_sound_quality_and_effects" />
        <item android:id="@id/menu_launch_setting" android:title="@string/settings" />
        <item android:id="@id/menu_help" android:title="@string/milk_help" />
        <item android:id="@id/menu_contact_us" android:title="@string/contact_us" />
    </group>
</menu>