<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/music_ic_ab_event" android:id="@id/menu_launch_event" android:title="@string/milk_events" app:showAsAction="always" />
    <item android:icon="@drawable/music_ic_ab_pass" android:id="@id/menu_launch_product" android:title="@string/milk_products_tab" app:showAsAction="always" />
    <group android:id="@id/menu_more_group">
        <item android:id="@id/menu_my_info" android:visible="false" android:title="@string/menu_my_info" />
        <item android:id="@id/menu_sound_alive" android:title="@string/menu_sound_quality_and_effects" />
        <item android:id="@id/menu_launch_setting" android:title="@string/settings" />
        <item android:id="@id/menu_help" android:title="@string/milk_help" />
        <item android:id="@id/menu_contact_us" android:title="@string/contact_us" />
    </group>
</menu>