<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/music_ic_ab_favorite_off" android:id="@id/toggle_heart" android:title="@string/heart" app:showAsAction="always" />
    <item android:id="@id/menu_launch_search" android:title="@string/search" app:showAsAction="always" />
    <group android:id="@id/menu_more_group">
        <item android:id="@id/menu_launch_edit_mode" android:title="@string/menu_edit" />
        <item android:id="@id/menu_ts_online_store" android:visible="false" android:title="@string/lgt_mp3_ringtone" />
        <item android:id="@id/menu_sound_alive" android:title="@string/menu_sound_quality_and_effects" />
        <item android:id="@id/menu_launch_setting" android:title="@string/settings" />
    </group>
</menu>