<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <androidx.appcompat.widget.Toolbar android:layout_gravity="center_vertical" android:id="@id/toolbar" android:layout_width="fill_parent" style="@style/Toolbar" />
    </FrameLayout>
    <com.samsung.android.app.musiclibrary.ui.widget.round.RoundedScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize" android:layout_marginBottom="@dimen/winset_bottom_bar_height">
        <LinearLayout android:orientation="vertical" android:id="@id/meta_edit_view" android:paddingTop="@dimen/meta_edit_layout_padding_vertical" android:paddingBottom="@dimen/meta_edit_layout_padding_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/encoding_type_header" android:text="@string/encoding_type" android:layout_marginStart="@dimen/winset_description_margin_horizontal" android:layout_marginEnd="@dimen/winset_description_margin_horizontal" style="@style/Font.Roboto.Regular.HintLabel" />
            <Spinner android:id="@id/encoding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/mu_edittext_margin_start" android:layout_marginEnd="@dimen/winset_spinner_margin_horizontal" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/title_edit_text" app:hint="@string/title" app:nextImeFocus="@id/artist">
                <requestFocus />
            </com.samsung.android.app.music.widget.ButtonEditTextView>
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/artist" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/artist_edit_text" app:hint="@string/artist" app:nextImeFocus="@id/album" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/album" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/album_edit_text" app:hint="@string/album" app:nextImeFocus="@id/album_artist" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/album_artist" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/album_artist_edit_text" app:hint="@string/album_artist" app:nextImeFocus="@id/genre" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/genre" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/genre_edit_text" app:hint="@string/genre" app:nextImeFocus="@id/recording_date" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/recording_date" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/recording_date_edit_text" app:hint="@string/recording_date" app:inputType="number" app:maxLength="8" app:nextImeFocus="@id/track_number" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/track_number" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/track_number_edit_text" app:hint="@string/track_number" app:inputType="number" app:maxLength="3" app:nextImeFocus="@id/disc_number" />
            <com.samsung.android.app.music.widget.ButtonEditTextView android:id="@id/disc_number" android:layout_width="fill_parent" android:layout_height="wrap_content" app:editTextId="@id/disc_number_edit_text" app:hint="@string/disc_number_text" app:inputType="number" app:maxLength="1" />
        </LinearLayout>
    </com.samsung.android.app.musiclibrary.ui.widget.round.RoundedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView android:layout_gravity="bottom" android:id="@id/bottom_navigation" android:layout_width="fill_parent" android:layout_height="@dimen/winset_bottom_bar_height" app:menu="@menu/meta_edit_common" style="@style/BottomBarStyle" />
</FrameLayout>